# FractalStream

./: CONTRIBUTORS  LANGUAGE.md  NOTES.md  README.md  wiz0c.yaml  wiz1.yaml
.github/workflows/: linux.yml  macos.yml
examples/: basic_julia.yaml  basic_mandelbrot.yaml  bulbs.yaml  circle.yaml  external_rays.yaml  logistic.yaml  mandelbrain.yaml  newton.yaml  newton3.yaml  parameter-plane.yaml  smooth_mandelbrot.yaml  spider.yaml  tiled-mandelbrot.yaml  tool_config.yaml  twisted_mandelbrot.yaml  twisted_rabbit.yaml  very_simple_rabbit.yaml
fractalstream-backend-llvm/: cabal.project  fractalstream-backend-llvm.cabal  stack.yaml
fractalstream-backend-llvm/src/: Backend.hs
fractalstream-backend-llvm/src/Backend/: LLVM.hs
fractalstream-backend-llvm/src/Backend/LLVM/: Code.hs  Operand.hs  Value.hs
fractalstream-backend-pure/: fractalstream-backend-pure.cabal  stack.yaml
fractalstream-backend-pure/src/: Backend.hs
fractalstream-backend-pure/src/Backend/: Pure.hs
fractalstream-core/: README.md  fractalstream-core.cabal  stack.yaml
fractalstream-core/src/: Actor.hs
fractalstream-core/src/Actor/: Configuration.hs  Ensemble.hs  Event.hs  Layout.hs  Tool.hs
fractalstream-core/src/Actor/Viewer/: Complex.hs
fractalstream-core/src/Data/: Color.hs  DynamicValue.hs
fractalstream-core/src/FractalStream/: Prelude.hs
fractalstream-core/src/Language/: Code.hs  Draw.hs  Environment.hs  Parser.hs  Type.hs  Value.hs
fractalstream-core/src/Language/Code/: InterpretIO.hs  Parser.hs  Simulator.hs
fractalstream-core/src/Language/Untyped/: Code.hs  Infer.hs  Shape.hs
fractalstream-core/src/Language/Value/: Evaluator.hs  Parser.hs  Typecheck.hs
fractalstream-core/src/Task/: Block.hs  Concurrent.hs
fractalstream-core/test/Language/Code/: ParserSpec.hs
fractalstream-core/test/Language/Effect/: ListSpec.hs
fractalstream-core/test/Language/Value/: ParserSpec.hs
fractalstream-ui-wx/: Setup.hs  fractalstream-ui-wx.cabal  stack.pure.yaml  stack.yaml
fractalstream-ui-wx/src/: Main.hs
fractalstream-ui-wx/src/UI/: CodeEditor.hs  Layout.hs  Menu.hs  ProjectActions.hs  ProjectEditor.hs  ProjectViewer.hs  Welcome.hs
