cabal-version:       3.0
name:                fractalstream-backend-pure
version:             2.0.0.0
synopsis:            FractalStream script interpreter.
description:         FractalStream script interpreter.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Matt Noonan
maintainer:          matt.noonan@gmail.com
copyright:           2025, Matt Noonan
category:            Math
build-type:          Simple

common FractalStream-common
  ghc-options:         -Wall -Werror -O2 -Wno-star-is-type
  -- This is basically the list of extensions from
  -- https://lexi-lambda.github.io/blog/2018/02/10/an-opinionated-guide-to-haskell-in-2018/
  -- with a few minor additions like ViewPatterns.
  -- I also switch on RecordWildCards because I like it: it lets you bring
  -- all fields of a record into scope, giving some of the flavor of an OOP
  -- language with member variables automatically in scope of object methods.
  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DerivingStrategies
                     , EmptyCase
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators
                     , ViewPatterns
  default-language:    Haskell2010

library
  import: FractalStream-common
  exposed-modules:     Backend
  other-modules:       Backend.Pure
  build-depends:       base >=4.8 && <5
                     , fractalstream-core
  hs-source-dirs:      src
